syntax = "proto3";


package instrosetta.interfaces.motion_control.singleaxis.v1;

import "instrosetta/common/connection.proto";


service SingleAxis {
    rpc ScanDevices(ScanDevicesRequest) returns (stream ScanDevicesResponse) {}
    rpc Connect(ConnectRequest) returns (ConnectResponse) {}
    rpc Disconnect(DisconnectRequest) returns (DisconnectResponse) {}

    rpc HomeMotor(HomeMotorRequest) returns (Position) {}
    rpc GetRange(GetRangeRequest) returns (StageRange) {}
    rpc GetPosition(GetPositionRequest) returns (Position) {}
    rpc MoveAbsolute(MoveAbsoluteRequest) returns (stream Position) {}
    rpc MoveRelative(MoveRelativeRequest) returns (stream Position) {}
}


message ScanDevicesRequest {
    string name = 1;
    bool include_simulated = 2;
}

message ScanDevicesResponse {
    string name = 1;
    string device_id = 2;
}

message HomeMotorRequest {
    string name = 1;
}

message GetRangeRequest {
    string name = 1;
    string units = 2;
}

message StageRange {
    string name = 1;
    string units = 2;
    double min = 3;
    double max = 4;
    double resolution = 5;
}

message GetPositionRequest {
    string units = 1;
}

message Distance {
    double value = 1;
    string units = 2;
    enum Direction {
        undefined = 0;
        forward = 1;
        backward = 2;
    }
    Direction direction = 3;
}

message Position {
    double value = 1;
    string units = 2;
}

message MoveAbsoluteRequest {
    string name = 1;
    Position position = 2;
}

message MoveRelativeRequest {
    string name = 1;
    Distance distance = 2;

}